// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DiagonalTopRightLine Component should match the snapshot with a winner 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "blue",
      "borderRadius": 10,
      "height": 0,
      "opacity": 0,
      "position": "absolute",
      "right": 20,
      "transform": [
        {
          "translateX": 50,
        },
        {
          "translateY": -10,
        },
        {
          "rotate": "-45deg",
        },
        {
          "translateX": -50,
        },
        {
          "translateY": 10,
        },
        {
          "translateY": 0,
        },
      ],
      "width": 100,
    }
  }
/>
`;

exports[`DiagonalTopRightLine Component should match the snapshot without a winner 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "red",
      "borderRadius": 10,
      "height": 0,
      "opacity": 0,
      "position": "absolute",
      "right": 20,
      "transform": [
        {
          "translateX": 50,
        },
        {
          "translateY": -10,
        },
        {
          "rotate": "-45deg",
        },
        {
          "translateX": -50,
        },
        {
          "translateY": 10,
        },
        {
          "translateY": 0,
        },
      ],
      "width": 100,
    }
  }
/>
`;
